# sparse-wsi-vit

./: LICENSE  README.md  pyproject.toml
experiments/: run.py
jobs/: static_sparse_attention.job
notebooks/: compare_chunk_alignment.ipynb  speed_benchmark.ipynb
scripts/: download_camelyon16.py  downsample_grid.sh  upload_snellius.py  virchow_preprocess.py
src/ViT-5/: README.md  pyproject.toml
src/sparse_wsi_vit/: __init__.py
src/sparse_wsi_vit/configs/: baseline_abmil.py  baseline_hipt.py  baseline_transmil.py  baseline_vit5dense_preembed.py  baseline_vit5dense_preembed_camelyon.py  baseline_vit5dense_preembed_camelyon_112.py  baseline_vit5dense_preembed_tcga.py  baseline_vit5dense_preembed_tcga_tmb.py  deepseek_sparse_attention.py  example_classification.py  halligalli_abmil.py  halligalli_hipt.py  halligalli_transmil.py  halligalli_vit5dense.py  mondriaan_vit5dense.py  static_sparse_attention.py
src/sparse_wsi_vit/datasets/: camelyon16_dataset.py
src/sparse_wsi_vit/datasets/h5_slidedataset/: extract_cellvit_virchow_fast.py  h5_dataset.py
src/sparse_wsi_vit/datasets/halligalli_dataset/: extract_halligalli.py  extract_halligalli_virchow.py  halligalli.py  patch_cnn.py  train_patch_encoder.py
src/sparse_wsi_vit/datasets/mondriaan_dataset/: extract_mondriaan.py  mondriaan.py
src/sparse_wsi_vit/experiments/: __init__.py  default_cfg.py  trainer.py
src/sparse_wsi_vit/experiments/callbacks/: __init__.py  attention_map.py  wandb_cache_cleanup.py
src/sparse_wsi_vit/experiments/collators/: varlen_collate.py
src/sparse_wsi_vit/experiments/datamodules/: camelyon16_datamodule.py  h5_datamodule.py  halligalli_datamodule.py  (+2 more)
src/sparse_wsi_vit/models/: abmil.py  deepseek_sparse_attention.py  hipt.py  nsa.py  sparse_vit5_slide_encoder.py  static_sparse_attention.py  static_sparse_attention_old.py  transmil.py  vit5_dense.py
tests/: conftest.py  test_basic.py
tests/datasets/h5_slidedataset/: test_h5_feature_bag.py
tests/datasets/halligalli_dataset/: test_halligalli.py  test_halligalli_datamodule.py  test_patch_cnn.py  test_train_patch_encoder.py
tests/experiments/lightning_wrappers/: SKIPPED_checkpoint_resume.py  test_classification_loss.py  test_mil_wrapper.py  test_param_groups.py
tests/models/: test_abmil.py
(+37 files in other folders)
