[project]
name = "sparse-wsi-vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "p-adema", email = "peter.adema@student.uva.nl" }
]
requires-python = "==3.12.*"
dependencies = [
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "h5py>=3.16.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "openslide-bin>=4.0.0.13",
    "openslide-python>=1.4.3",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "polars>=1.39.3",
    "pytest>=9.0.3",
    "pytorch-lightning>=2.6.1",
    "rich>=14.3.3",
    "ruff>=0.15.10",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "ty>=0.0.30",
    #    "vit-5",
    "wandb>=0.25.1",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

#[tool.uv.workspace]
#members = ["src/ViT-5"]
#
#[tool.uv.sources]
#vit-5 = { workspace = true }



