[project]
name = "vit-5"
version = "0.1.0"
description = "ViT-5: Vision Transformers for the Mid-2020s"
readme = "README.md"
authors = [
    { name = "wangf3014" } # Packaged by Peter Adema
]
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "numpy>=2.4.4",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.26.0",
#    "flash-attn>=2.8.3; sys_platform != 'darwin'",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"